--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install discord.py
-        pip install Pillow 
+        pip install Pillow
+        pip install requests
     - name: Run the bot
       run: python bot.py
